--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,12 @@
 sudo: false
 
-cache:
-  directories:
-    - tests/elm-stuff/build-artifacts
-    - sysconfcpus
-
 os:
   - osx
   - linux
 
 env:
   matrix:
-    - ELM_VERSION=0.18 TARGET_NODE_VERSION=node
-
-before_install:
-  - if [ ${TRAVIS_OS_NAME} == "osx" ];
-    then brew update; brew install nvm; mkdir ~/.nvm; export NVM_DIR=~/.nvm; source $(brew --prefix nvm)/nvm.sh;
-    fi
-  - echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
-  - | # epic build time improvement - see https://github.com/elm-lang/elm-compiler/issues/1473#issuecomment-245704142
-    if [ ! -d sysconfcpus/bin ];
-    then
-      git clone https://github.com/obmarg/libsysconfcpus.git;
-      cd libsysconfcpus;
-      ./configure --prefix=$TRAVIS_BUILD_DIR/sysconfcpus;
-      make && make install;
-      cd ..;
-    fi
+    - ELM_VERSION=0.19 ELM_TEST_VERSION=elm0.19.0 TARGET_NODE_VERSION=node
 
 install:
   - nvm install $TARGET_NODE_VERSION
@@ -34,10 +14,7 @@ install:
   - node --version
   - npm --version
   - npm install -g elm@$ELM_VERSION
-  - mv $(npm config get prefix)/bin/elm-make $(npm config get prefix)/bin/elm-make-old
-  - printf '%s\n\n' '#!/bin/bash' 'echo "Running elm-make with sysconfcpus -n 2"' '$TRAVIS_BUILD_DIR/sysconfcpus/bin/sysconfcpus -n 2 elm-make-old "$@"' > $(npm config get prefix)/bin/elm-make
-  - chmod +x $(npm config get prefix)/bin/elm-make
-  - npm install -g elm-test
+  - npm install -g elm-test@$ELM_TEST_VERSION
   - npm install -g elm-verify-examples
 
 
