--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,9 @@ install:
   - npm install -g elm@$ELM_VERSION
   - npm install -g elm-test@$ELM_TEST_VERSION
   - npm install -g elm-verify-examples
-
+  - elm --version
+  - elm-test --version
+  - elm-verify-examples --version
 
 script:
   - ./run_tests.sh
